test_regress/t/t_var_xref_bad.out
%Error: t/t_var_xref_bad.v:11:15: Can't find definition of variable/method: 'bad_missing_ref'
   11 |   initial tsk.bad_missing_ref = 0;
      |               ^~~~~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
